--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -46,15 +46,14 @@ main {
     margin-right: 50px;
     margin-left: 50px;
   }
+
+  @include mq(sm-mid,max){
+    margin-right: 15px;
+    margin-left: 15px;
+  }
 }
 
-.page-header {
-  margin: 0 0 20px;
-  padding: 0;
 
-  font-size: 24px;
-  font-weight: bold;
-}
 
 .movies {
   margin-top: 30px;
@@ -62,5 +61,10 @@ main {
   grid-gap: 15px;
   grid-template-columns:  1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
+
+  @include mq(md,max){
+     grid-template-columns:  1fr 1fr 1fr;
+     grid-gap: 8px;
+  }
 }
 
